[#620]No need of --add-module for maven-javadoc-plugin:3.6.0
Signed-off-by: Anton Pinsky <anton.pinsky@ionos.com>